deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cmv-deployment
  labels: 
    app: cmv
spec:
  replicas: 5
  selector:
    matchLabels:
      app: cmv
  template:
    metadata:
      labels:
        app: cmv
    spec:
      containers:
      - name: cmv
        image: avouacr/socsemics-viz-app
        ports:
        - containerPort: 5006
